added projects variables c

--- a/c/Makefile
+++ b/c/Makefile
@@ -9,3 +9,25 @@ CFLAGS  = -Wall -Wextra -Werror
 LFLAGS  =
 # Libraries flags
 LDFLAGS =
+
+##########################################################
+##			PROJECTS			##
+##########################################################
+# Name
+TARGET  = name
+# Directorys
+SRCDIR  = src
+HDRDIR  = inc
+OBJDIR  = obj
+BINDIR  = bin
+DEPDIR  = dep
+DATDIR  = data
+DOCDIR  = doc
+TESDIR  = test
+
+# All target variable
+all:    $(TARGET)
+
+# declaration variables
+RM  = rm -f
+RMDIR   = rm -rf
