declare main project comilation variables

--- a/c/Makefile
+++ b/c/Makefile
@@ -10,3 +10,10 @@ LFLAGS	=
 # Libraries flags
 LDFLAGS	=
 
+##########################################################
+##			PROJECTS			##
+##########################################################
+VPATH	= src
+
+main:	main.c
+	$(CC) $(CFLAGS) -o $@ $?
