added clean PHONY

--- a/c/Makefile
+++ b/c/Makefile
@@ -17,3 +17,12 @@ VPATH	= src
 
 main:	main.c
 	$(CC) $(CFLAGS) -o $@ $?
+
+
+##########################################################
+##                      PHONYS                          ##
+##########################################################
+# Clean
+.PHONY: clean
+clean:
+	rm -rf *.o main
